wip: formal desirables

--- a/Chapter_03.tex
+++ b/Chapter_03.tex
@@ -286,13 +286,13 @@ Defense of S5 for knowledge rests on an interpretation of the knowledge operator
 We must justify this interpretation. While ours is a model that departs from those that appear in formal epistemology, we shall argue that it does a good job of capturing the prominent theories of knowledge espoused by non-formal epistemologists. Our model is also situated well on the rationality tier for modeling realistic human agents whose beliefs are justified, which is a dramatic improvement, from the perspective of realism, over the higher tiers with S5 common knowledge or S5 bounded rationality.
 
 \subsubsection{Desiderata of a Static Base}
-In constructing our static base, we must identify the desirable features to be achieved. In laying out these desirable features, we motivate our model that combines knowledge and belief. 
+In constructing our static base, we must identify the desirable features to be achieved. A model of knowledge and belief for human-like agents can be assessed by how well it satisfies these desirable features. 
 
-First, the model should be well-balanced in the trade off of normativity \emph{vs.} realism so that it can be used to analyze real-world cases as well as idealized formal cases.
+First, the model should be well-balanced in the trade off of normativity \emph{vs.} realism so that it can be used to analyze real-world cases as well as idealized formal cases. It scores well on realism to the extent that it represents the reasoning of human-like agents in environments of relative messiness, like the real world. It scores well on normativity to the extent that its departures from realism are improvements over reality to be strived for. Not all idealizations in models are normative in character, as we shall see.
 
 Second, the model should make sense from an epistemological standpoint, \emph{viz.} the philosophical considerations of epistemologists. To construct a system of epistemic logic is to construct a formal theory of epistemology for \emph{some} type of agent, whether it is a perfect deductive reasoner like a computer over a relatively small database ontology or \emph{homo economicus} in well-structured strategic situations, or an imperfect reasoner like a human in the real world. So far, the latter type of agent has been neglected by formal efforts, because attention has been on properties of formal systems, see below, rather than primarily on their philosophical foundations. 
 
-Third, the model should be a sound and complete logical system to serve as a static foundation for an extension that treats actions. Just because attention must be paid to the philosophical foundations and motivations for a formal system does not mean that the formal system is off the hook for the standard desiderata of a logic. The logic should also seek to balance expressive power and complexity, which are always in competition with each other.
+Third, the model should be a sound and complete logical system to serve as a static foundation for an extension that treats actions. Just because attention must be paid to the philosophical foundations and motivations for a formal system does not mean that the formal system is off the hook for the standard desiderata of a logic. The logic must avert a collapse of belief and knowledge. The logic must abide by the principle of indistinguishability, where an agent cannot distinguish between possible worlds it cannot rule out. If the logic allows for any introspection, it must avoid the L\"obian Obstacle.
 
 \paragraph{1. Normative-Realism Trade-Off} 
 A model of rationality is situated in a spectrum trading off realism for normative evalutation and prescription. A totally idealized model like that of game theory or rational choice theory is entirely normative. There is no doubt that the agents being modeled are not anything like human beings. The model presumes normativity by showing that acting like an ideally rational agent results in optimal payoffs possible. So, for humans who want to optimize their decisions for payoffs, acting like ideally rational agents is best. However, ideally rational agents have properties that real humans lack, so unless a human can run a simulated agent on a correctly formalized model of a situation, she is unlikely to identify the correct action. After the fact, with a correctly formalized model of the situation, her decision can be analyzed in a post-mortem, but post-mortems never do any good for their subjects.
@@ -353,12 +353,12 @@ Denying (1) denies that knowledge is closed under logical entailment, and denyin
 
 A theory of justification is internalist if it holds that the believer is justified in believing some proposition $\varphi$ if and only if she has awareness or access to the basis for believing $\varphi$. Externalist theories deny this, and hold that external facts, \emph{e.g.} the causal process that produced the belief, are what justify beliefs and produce knowledge. Theories of justification sometimes apply to both knowledge and justified belief, and sometimes to just one or the other.
 
-A strong internalist view is that, through reflection, one can know that she knows a propostion, and know that she believes but does not know a proposition~\cite{Prichard}. This corresponds to including both introspection axioms for the knowledge operator. A weaker internalist view that we endorse is \emph{evidentialism}, which holds that a belief is justified if and only if the believer has evidence supporting the belief. The task of an \emph{evidentialist} theory is to spell out what evidence is.
+An example internalist view is that, through reflection, one can know that she knows a propostion, and know that she believes but does not know a proposition~\cite{Prichard}. This corresponds to including both introspection axioms for the knowledge operator. A weaker internalist view that we endorse is \emph{evidentialism}, which holds that a belief is justified if and only if the believer has evidence supporting the belief. The task of an \emph{evidentialist} theory is to spell out what evidence is.
 
-A dominant externalist position is that the process that produced the belief that $\varphi$ be a \emph{reliable} one, in some sense to be defined by a given \emph{reliablist} theory. This avoids the problem of skepticism by placing the justification relation between the world and the knowledge of the agent, with or without the agent's awareness of this justification being present. Thus, if $\varphi$ is true, and $i$'s belief that $\varphi$ is produced by a reliable process in the real world, then $i$ knows that $\varphi$ and therefore knows that the \emph{skeptical hypothesis} is false, because inferring that from their being inconsistent is also a reliable process. This approach clearly rejects both positive and negative introspection axioms, as introspection plays no role in the justification of knowledge.
+An example externalist position is that the process that produced the belief that $\varphi$ be a \emph{reliable} one, in some sense to be defined by a given \emph{reliablist} theory. This avoids the problem of skepticism by placing the justification relation between the world and the knowledge of the agent, with or without the agent's awareness of this justification being present. Thus, if $\varphi$ is true, and $i$'s belief that $\varphi$ is produced by a reliable process in the real world, then $i$ knows that $\varphi$ and therefore knows that the \emph{skeptical hypothesis} is false, because inferring that from their being inconsistent is also a reliable process. This approach clearly rejects both positive and negative introspection axioms, as introspection plays no role in the justification of knowledge.
 
-
-The positive introspection axiom destroys almost all knowledge through the application of its contrapositive, $\tlnot \Kns{i}\Kns{i}\varphi \iimplies \tlnot \Kns{i}\varphi$. Thus, if strong internalism about knowledge is true, then knowledge is extremely rare. Knowing that one knows a proposition $\varphi$ amounts to satisfying all the conditions of knowledge with respect to the proposition that one knows $\varphi$. This means that in addition to satisfying all the conditions of knowledge with respect to $\varphi$, including the external conditions of justification, one must also be in a position to know that those external conditions are in fact satisfied. On a causal theory of justification, this amounts to knowing, actually \emph{knowing}, the exact causal process that produced your knowledge, and that this is a justifying causal process. An internalist theory of knowledge suffers from an infinite regress about the condition that known propositions be true. With the positive introspection axiom, $\Kns{i}\varphi$ only if $\Kns{i}\Kns{i}\varphi$, and $\Kns{i}\Kns{i}\varphi$ only if $\Kns{i}\Kns{i}\Kns{i}\varphi$, etc. At each layer, even for an internalist theory of knowledge, there is one externalist condition of knowledge, namely that the known proposition actually be true of the world. This amounts to knowing things in the object language about the metalanguage semantics, creating an infinitely high semantic tower that must be known in order for one atomic proposition to be known. The demands on knowledge are exceedingly high. Therefore, externalist positions about knowledge ought to, and frequently do, abandon the positive introspection requirement.
+The problem for an epistemic logician constructing a formal theory is to select an appropriate target for formalization. Most recent work avoids this problem by instead focusing on technical innovations applied to toy problems. We deny ourselves that route, and in doing so much make decisions regarding the above problems in a way that we can philosophically defend.
+%The positive introspection axiom destroys almost all knowledge through the application of its contrapositive, $\tlnot \Kns{i}\Kns{i}\varphi \iimplies \tlnot \Kns{i}\varphi$. Thus, if strong internalism about knowledge is true, then knowledge is extremely rare. Knowing that one knows a proposition $\varphi$ amounts to satisfying all the conditions of knowledge with respect to the proposition that one knows $\varphi$. This means that in addition to satisfying all the conditions of knowledge with respect to $\varphi$, including the external conditions of justification, one must also be in a position to know that those external conditions are in fact satisfied. On a causal theory of justification, this amounts to knowing, actually \emph{knowing}, the exact causal process that produced your knowledge, and that this is a justifying causal process. An internalist theory of knowledge suffers from an infinite regress about the condition that known propositions be true. With the positive introspection axiom, $\Kns{i}\varphi$ only if $\Kns{i}\Kns{i}\varphi$, and $\Kns{i}\Kns{i}\varphi$ only if $\Kns{i}\Kns{i}\Kns{i}\varphi$, etc. At each layer, even for an internalist theory of knowledge, there is one externalist condition of knowledge, namely that the known proposition actually be true of the world. This amounts to knowing things in the object language about the metalanguage semantics, creating an infinitely high semantic tower that must be known in order for one atomic proposition to be known. The demands on knowledge are exceedingly high. Therefore, externalist positions about knowledge ought to, and frequently do, abandon the positive introspection requirement.
 
 %\subparagraph{Open World Property}
 %A formal model of human knowledge should do right by the world that humans know things about, to the largest extent as is reasonable. This means abiding by the open world property,
@@ -390,6 +390,25 @@ The positive introspection axiom destroys almost all knowledge through the appli
 %This is justified by the principle that people normally believe what they assert as statements. Hintikka's doxastic logic has a transitive doxastic relation, so it takes positive introspection about belief as an axiom, and therefore the above formalization is not satisfiable in a model (and so is doxastically implied). 
 
 \paragraph{3. Formal Properties}
+
+A system of logic ought to be sound and complete. An epistemic logic with both belief and knowledge operators must avoid an equivalence collapse of the knowledge and belief operator, which can occur if one is not careful in choosing axioms. For a logic of sufficient expressive power, namely one with agents who can reason about their own reasoning, it must avoid a special obstacle to an agent trusting its own conclusion, dubbed the L\"obian Obstacle by researchers in the foundations of artificial intelligence. Modal logics with reflective reasoners must address this obstacle. 
+
+\subparagraph{Soundness and Completeness}
+Soundness and completeness are familiar properties for students of logic. They are briefly mentioned here as a reminder.
+\begin{definition}[Soundness]
+	Logic $\mathcal{L}$ is \emph{sound} if and only if $\models\varphi$ implies $\vdash\varphi$,
+\end{definition}
+where $\models\varphi$ is semantic validity of $\varphi$ and $\vdash\varphi$ is axiomatic derivability.
+
+\begin{definition}[Completeness]
+	Logic $\mathcal{L}$ is \emph{complete} if and only if $\vdash\varphi$ implies $\models\varphi$.
+\end{definition}
+
+\subparagraph{Knowledge and Belief}
+Knowledge and belief are distinct. There are two distinguishing characteristics between them. The first is that belief and knowledge sit in a part-whole relationship to each other. $i$ knows that $\varphi$ if and only if 1) $i$ believes that $\varphi$, 2) $i$ is justified in believing $\varphi$, 3) $\varphi$ is true, with additional parts still being determined by epistemologists. The second is that knowledge of a proposition requires that the known proposition be true, while belief requires no such truth condition. If an epistemic logic with operators for belief and knowledge collapses them into equivalence, such that $\Bels{i}\varphi \iiff \Kns{i}\varphi$, it has gone wrong, and is not acceptable.
+
+
+
 OLD BELOW\\
 This system warrants defending, as John Rushby has recently challenged the decisions. His concerns can be summarized as follows:
 \begin{enumerate}
