--- a/ThesisMaster.tex
+++ b/ThesisMaster.tex
@@ -231,7 +231,7 @@
 \newcommand{\etal}{\textit{et.~al.}}
 \newcommand{\nnot}{\textsf{\ not \ }}
 \newcommand{\oor}{\textsf{\  or \ }}
-\newcommand{\iiff}{\textsf{\  iff \ }}
+\newcommand{\iiff}{{\  \Leftrightarrow \ }}
 \newcommand {\aand}{ \textsf{\ and \ } }
 \newcommand {\timplies} { \textsf{\ implies \ }}
 \newcommand {\tland}{{\ \wedge \ }}
