--- a/Chapter_03.tex
+++ b/Chapter_03.tex
@@ -187,7 +187,29 @@ The definitions of the dynamic modalities make use of a relation between two mod
 	\end{align*}
 \end{tcolorbox}
 
+\subsection{Interpreting $\Kns{}$ and $\Bels{arg1}$}
+Before continuing, we must clearly articulate the intended interpretation of our knowledge and belief operators. Epistemic logic can produce some counterintuitive results if the knowledge operator is interpreted inappropriately for the system. For example, the standard Distribution Axiom of knowledge, $\Kns{i}(\varphi \iimplies \psi) \iimplies (\Kns{i}\varphi \iimplies \Kns{i}\psi)$ states that agents are logically omniscient. This clearly is not the case for humans if the operator is interpreted as ``agent $i$ actively knows right now that $\varphi$". So, the standard interpretation in the literature for an epistemic logic with just a knowledge operator is that that ``agent $i$ \emph{implicitly} knows that $\varphi$," meaning something like the claim that $\varphi$ is a live candidate for knowledge for $i$, should they come to examine it. For doxastic logic, a similar concern arises for belief, as it has the Distribution Axiom as well. The interpretation here is usually something like ``agent $i$'s beliefs \emph{commit} $i$ to $\varphi$." In both cases, the interpretation moves away from an active, explicit occurrence of the proposition in the agent's mind in order to avoid the weirdness of closure. We do not adopt this interpretation. We construct a logic that combines knowledge and belief in such a way that active explicit knowledge and belief are interpretations that make sense.
 
+Our interpretation is analogous to a debate that occurs concerning the interpretation of probabilities among frequentists and Bayesians. Frequentists hold that probabilities represent objective frequencies that occur in the world, which can be counted through controlled experiment, and which should directly map to the probability for an event. For Bayesians, probabilities represent subjective uncertainty in the mind of a reasoner. Rather than constructing a model based on one or the other of these notions, we construct a model that includes both the notion of objectively available evidence and subjectively available evidence.
+
+\begin{definition}[Objectively Available Evidence]~\label{obj_ev}
+Evidence is \emph{objectively available} for proposition $\varphi$ if and only if some source of information exists in the actual world that supports the proposition $\varphi$.
+\end{definition}
+
+What is it for a source of information to exist that supports a proposition? An event occurs which satisfies the proposition, and observable consequences of the event share mutual information with the proposition, and potentially other propositions. Thus, when a coin lands with \emph{heads} facing up, the light reflecting off the coin's surface is a source of information that supports the propositions that ``the coin landed \emph{heads} up," and ``the coin is unfair and has two \emph{heads}," and ``the coin landed \emph{tails} down." The light reflecting off the surface is objectively available evidence. If anyone sees the light reflecting off the coin, then this evidence becomes subjectively available to them. 
+
+\begin{definition}[Subjectively Available Evidence]~\label{subj_ev}
+Evidence is \emph{subjectively available} to agent $i$ for proposition $\varphi$ if and only if $i$ has immediate mental awareness of some information, accurate or inaccurate, that supports the proposition $\varphi$.
+\end{definition}
+
+Seeing a coin land \emph{heads} is subjectively available evidence to the agent that sees it. Later, misremembering the event, and believing that one saw the coin land \emph{tails} is also subjectively available evidence. But the objectively available evidence is still that light that reflected off the coin's surface, which was in a \emph{heads} up orientation at the time. If someone, say Alice, tells you they saw a ghost, this is objectively available evidence for the propositions, ``Alice saw a ghost," and ``Alice claims to have seen a ghost." Whether you believe both of these propositions or not depends on myriad things, which this model does not address, but the soundwaves emanating from Alice's mouth when she tells you that she saw a ghost are objectively available evidence. If she said it out loud to no one in particular in a room she thought was empty of people, but a tape recorder was running, then her saying it and causing the information to be stored on the tape recorder would constitute objectively available evidence. When someone listens to the tape recorder, it becomes subjectively available evidence, and the possible worlds under her consideration include potentially both propositions, and almost certainly the latter.
+
+Thus, from the actual world, epistemically possible worlds are created by objectively available evidence, and doxastically possible worlds are created by subjectively available evidence. At those doxastically possible worlds, further epistemically possible worlds may exist, but they are no longer generated by objectively available evidence. Instead, they are generated by subjective evidence of objective evidence. Consider the coin flip. When the coin lands \emph{heads} up, all epistemically possible worlds become constrained to those in which the proposition ``the coin landed \emph{heads} up" is true. When $i$ sees it happen, doxastically possible worlds exist in which the propositions ``the coin landed \emph{heads} up" and ``The evidence tells me that the coin landed \emph{heads} up" and ``I know that the coin landed \emph{heads} up" are true, because she is perceiving the objectively available evidence. Her perception of it makes it subjective, but the perception is that it is objective, which is true of the information flowing from the event, but not of the information flowing from her perception of it.
+%Thus, epistemically possible worlds are tied to the actual world in some sense, and doxastically possible worlds depend on an agent's mental consideration. What about the epistemic relation beneath the doxastic layer? For example, what about when $i$ remembers the event of the cThat is, what about the situation in which $i$ has subjectively available evidence for worlds in which her evidence is also objectively available? We maintain that there is a difference, but it is a subjective difference. When $i$ considers worlds possible in which she has objective evidence for a proposition, that evidence is subjectively objective, because her subjectively available evidence indicates to her that she has objective evidence. Ultimately, though, subjectively objective evidence is subjective. We capture this notion with the frame relation that $(\Rel{k}^i \circ \Rel{b}^i) \subseteq \Rel{b}^i$. Once it enters the subjective realm, it can never leave and be truly objective again; but it seems to $i$ that it is objective. So, when someone misremembers an event they observed, in remembering it they take a step down the doxastic possibility relation, and in activating it as evidence, they feel as if they are activating objective evidence, and so they take a step down an epistemic relation. But it is not objective evidence, it is mediated by the internal, subjective filter of the agent's own mind.
+
+%We leave the notions of ``source of information existing", ``support for propositions", and ``immediate mental awareness" unanalyzed, but trust that they are intuitively reducible to familiar concepts for the reader. They articulate the difference between experimental support published in a peer-reviewed journal article that supports a proposition, and an agent reading and believing the evidence in the article. In the former case, her epistemically possible worlds will include some in which the proposition is true, while in the latter case, her doxastically possible worlds will all come to satisfy the proposition. If she reads the article and uses it to update her beliefs according to some probabilistic account, perhaps the some doxastically worlds satisfy the proposition, while others do not, but she now considers the proposition possibly true. It was epistemically possible for her so long as there never has been objectively available evidence ruling it out, but it became doxastically possible for her once the evidence became subjectively available to her.
+
+This still leaves the problem of logical omniscience to be addressed. It gets generated for our logic specifically in the following way. All propositional tautologies are theorems of the logic. By the rule of $\Kns{i}$ Necessitation, all theorems are known. The Distribution Axiom of $\Kns{i}$ over implication says if a theorem is known, and $i$ knows that the theorem $\varphi$ implies $\psi$, then $i$ knows $\psi$. Since knowledge implies belief, $\Bels{i}\psi$. Thus, $i$ knows and believes every mathematical theorem. TODO: fix logical omniscience.
 \subsection{Hilbert System}
 DASL is axiomatized by the following Hilbert system.\\
 
@@ -426,11 +448,12 @@ The theorem grew out of G\"odel's incompleteness results about self-referential 
 The standard modal provability logic is \boldmath{GL}, for G\"odel L\"ob. It is a normal modal logic with~\ref{modal_lob} as an axiom. The conditions that lead to the derivation of L\"ob's Theorem for other modal logics are the following:
 \begin{enumerate}
 	\item The modal logic contains the Rule of Necessitation: From $\vdash \varphi$ infer $\vdash \Box \varphi$.
-	\item The modal logic is normal: $\Box(\varphi \iimplies \psi) \iimplies (\Box \varphi \iimplies \Box \psi)$
+	\item The modal logic is normal: $\Box(\varphi \iimplies \psi) \iimplies (\Box \varphi \iimplies \Box \psi)$.
 	\item The modal operator's relation is transitive, \emph{i.e.,} it is a theorem that $\Box \varphi \iimplies \Box \Box \varphi$.
 	\item The modal logic contains modal fixpoints: $\vdash \psi \iiff F(\Box\psi)$, for some formula $F$ containing $\psi$ as a subformula.
+%	 OR the logic contains reflexive agents: They can define a $\psi$ for every $\varphi$ such that $\psi \equiv \Box\psi \implies \varphi$.
 \end{enumerate}
-If these four conditions are met, the modal logic will include L\"ob's Theorem. For logic's of knowledge and belief, conditions (1)-(3) are almost unavoidable for at least one of the operators. Condition (4) is likewise challenging to avoid, as common knowledge and common belief explicitly introduce modal fixpoints.
+If these four conditions are met, the modal logic will include L\"ob's Theorem. For logic's of knowledge and belief, conditions (1)-(3) are almost unavoidable for at least one of the operators. Condition (4) is likewise challenging to avoid, as common knowledge and common belief explicitly introduce modal fixpoints, but more fundamentally, there's no principled reason to say the human-like agents being modeled are incapable of expressing a sentence $\psi \stackrel{def}{=}$ "If I know that $\psi$, then $\varphi$". Humans clearly \emph{can} articulate self-referential sentences, and at the very least, they can reason on the level of Peano Arithmetic, which is sufficient for the problem to occur. Such agents will encounter the L\"obian Obstacle, and come to know contradictions. This level of error is not desired in the model. Knowledge and belief serve as a foundation for action, so the potential to know and believe anything leads to the potential for any action to be executed in a way that seems rational to the agent.
 
 OLD BELOW\\
 This system warrants defending, as John Rushby has recently challenged the decisions. His concerns can be summarized as follows:
